--- a/lib/calorie_web/templates/layout/app.html.eex
+++ b/lib/calorie_web/templates/layout/app.html.eex
@@ -23,12 +23,10 @@
             <% else %>
               <li><%= link "Register", to: Routes.user_path(@conn, :new) %></li>
               <li><%= link "Log in", to: Routes.session_path(@conn, :new) %></li>
+              <li><%= link "Foods", to: Routes.food_path(@conn, :index) %> </li>
             <% end %>
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
       </section>
     </header>
     <main role="main" class="container">
