Added tests - interface_test's & form_test & login_test's.

--- a/lib/calorie_web/templates/page/index.html.eex
+++ b/lib/calorie_web/templates/page/index.html.eex
@@ -10,6 +10,9 @@
     <%= if @current_user do %>
       <li>
         <%= link "Your Cpm", to: Routes.physical_profile_path(@conn, :index) %>
+      </li>  
+      <li>
+        <%= link "Users", to: Routes.user_path(@conn, :index) %>
       </li>
     <% end %>
     </ul>
