--- a/lib/calorie_web/templates/page/index.html.eex
+++ b/lib/calorie_web/templates/page/index.html.eex
@@ -10,25 +10,15 @@
     <%= if @current_user do %>
       <li>
         <%= link "Your Cpm", to: Routes.physical_profile_path(@conn, :index) %>
-      </li>  
+      </li> 
       <li>
         <%= link "Users", to: Routes.user_path(@conn, :index) %>
       </li>
+      <li>
+        <%= link "Foods", to: Routes.food_path(@conn, :index) %> 
+      </li>
     <% end %>
     </ul>
-  </article>
-  <article class="column">
-    <h2>Help</h2>
-    <ul>
-      <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
-      </li>
-      <li>
-        <a href="https://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on Freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
-      </li>
-    </ul>
+
   </article>
 </section>
